<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.EmailVerificationFragment">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_arrowback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/arrow_back" />

        <TextView
            android:id="@+id/tv_titleEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/verifikasi_email_btn"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/text_note_verification"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative_layout" />

    <TextView
        android:id="@+id/tv_perintah"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/tv_perintah_verif"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_note" />

    <Button
        android:id="@+id/btn_sendVerif"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_medium"
        android:padding="8dp"
        android:text="@string/kirim_link_verifikasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_perintah" />

    <TextView
        android:id="@+id/tv_textAkunVerif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/akun_telah_terverifikasi"
        app:layout_constraintTop_toBottomOf="@id/btn_sendVerif"
        app:layout_constraintStart_toStartOf="@id/btn_sendVerif"
        app:layout_constraintEnd_toEndOf="@id/btn_sendVerif"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:visibility="invisible"
        android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>