<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_arrowback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:contentDescription="@string/arrow_back" />

            <TextView
                android:id="@+id/tv_titleEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/title_kirim_laporan"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/img_foto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:background="@color/light_grey"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relative_layout"
            android:contentDescription="@string/foto" />

        <Button
            android:id="@+id/btn_pilihFoto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pilih_gambar"
            app:layout_constraintEnd_toEndOf="@id/img_foto"
            app:layout_constraintStart_toStartOf="@id/img_foto"
            app:layout_constraintTop_toBottomOf="@id/img_foto" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_nama"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:enabled="false"
            android:hint="@string/nama_pengirim"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_pilihFoto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etfield_nama"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:enabled="false"
            android:hint="@string/email_pengirim"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_nama">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etfield_email"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_nohp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:enabled="false"
            android:hint="@string/nomor_telepon_pengirim"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etfield_nohp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_alamat"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:enabled="false"
            android:hint="@string/lokasi_jalan_rusak"
            app:hintEnabled="true"
            app:flow_wrapMode="aligned"
            app:helperText="Gunakan Tombol di kanan untuk mendapatkan lokasi"
            app:layout_constraintEnd_toStartOf="@id/btn_pickLokasi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_nohp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etfield_alamat"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="match_parent"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>


        <ImageButton
            android:id="@+id/btn_pickLokasi"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/image_button"
            android:src="@drawable/ic_pick_lokasi"
            app:layout_constraintBottom_toBottomOf="@id/et_alamat"
            app:layout_constraintEnd_toEndOf="@id/et_nohp"
            app:layout_constraintStart_toEndOf="@id/et_alamat"
            app:layout_constraintTop_toTopOf="@id/et_alamat"
            app:layout_constraintVertical_bias="0.105"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dd_tingkatRusak"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/tingat_kerusakan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_alamat">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:textColor="@color/black"
                android:id="@+id/tv_kerusakan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/kirim"
            app:layout_constraintTop_toBottomOf="@id/dd_tingkatRusak"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
