<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible"
    tools:context=".view.main.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctLay_home"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/img_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_logoHome"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/icon_logo_reverse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btn_goToEditProfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="4dp"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/text_pengaturan_akun"
            android:textAllCaps="false"
            android:textColor="@color/blue_primary_variant"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/poppins_medium"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:text="@string/text_greetings_home"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_logoHome" />

        <TextView
            android:id="@+id/tv_emailDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_hello"
            app:layout_constraintTop_toBottomOf="@id/tv_hello"
            tools:text="monitokatsuya@gmail.com" />

        <TextView
            android:id="@+id/tv_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_emailDisplay"
            android:textColor="@color/white"
            android:text="@string/refresh"
            android:visibility="invisible"
            android:textStyle="bold"
            android:layout_marginHorizontal="16dp"
            app:drawableStartCompat="@drawable/ic_rrefresh" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="-60dp"
        android:layout_marginEnd="18dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ctLay_home">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_totalLaporan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:text="@string/text_total_laporan"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/tv_totalLaporanDiterima"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_totalLaporanDiterima"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/laporan_diterima"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tv_totalLaporanDitolak"
                app:layout_constraintStart_toEndOf="@id/tv_totalLaporan"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_totalLaporanDitolak"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_horizontal"
                android:text="@string/laporan_ditolak"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_totalLaporanDiterima"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_angkaLaporan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/tv_totalLaporan"
                app:layout_constraintStart_toStartOf="@id/tv_totalLaporan"
                app:layout_constraintTop_toBottomOf="@id/tv_totalLaporan"
                tools:text="0" />

            <TextView
                android:id="@+id/tv_angkaLaporanDiterima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/tv_totalLaporanDiterima"
                app:layout_constraintStart_toStartOf="@id/tv_totalLaporanDiterima"
                app:layout_constraintTop_toBottomOf="@id/tv_totalLaporanDiterima"
                tools:text="0" />

            <TextView
                android:id="@+id/tv_angkaLaporanDitolak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/tv_totalLaporanDitolak"
                app:layout_constraintStart_toStartOf="@id/tv_totalLaporanDitolak"
                app:layout_constraintTop_toBottomOf="@id/tv_totalLaporanDitolak"
                tools:text="0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_listLaporan"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/blue_primary"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@id/cv_listLaporanDiterima"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_home">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/ic_all_report"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_descAllReport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/opensans_medium"
        android:gravity="center"
        android:text="@string/lihat_laporan_terkirim"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/cv_listLaporan"
        app:layout_constraintStart_toStartOf="@id/cv_listLaporan"
        app:layout_constraintTop_toBottomOf="@id/cv_listLaporan" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_listLaporanDiterima"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/blue_secondary"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@id/cv_listLaporanDitolak"
        app:layout_constraintStart_toEndOf="@id/cv_listLaporan"
        app:layout_constraintTop_toBottomOf="@id/cv_home">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/ic_approve_report"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_descAccReport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/opensans_medium"
        android:gravity="center"
        android:text="@string/lihat_laporan_diterima"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/cv_listLaporanDiterima"
        app:layout_constraintStart_toStartOf="@id/cv_listLaporanDiterima"
        app:layout_constraintTop_toBottomOf="@id/cv_listLaporanDiterima" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_listLaporanDitolak"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cv_listLaporanDiterima"
        app:layout_constraintTop_toBottomOf="@id/cv_home">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/ic_reject_report"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_descRejectReport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/opensans_medium"
        android:gravity="center"
        android:text="@string/lihat_laporan_ditolak"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/cv_listLaporanDitolak"
        app:layout_constraintStart_toStartOf="@id/cv_listLaporanDitolak"
        app:layout_constraintTop_toBottomOf="@id/cv_listLaporanDitolak" />

    <TextView
        android:id="@+id/tv_snk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/opensans_medium"
        android:text="@string/syarat_membuat_laporan"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_descAccReport" />

    <TextView
        android:id="@+id/tv_cekProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:drawablePadding="6dp"
        android:text="@string/kelengkapan_profil"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_snk"
        app:drawableTint="@color/red" />

    <TextView
        android:id="@+id/tv_cekEmailVerified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:drawablePadding="6dp"
        android:text="@string/verifikasi_email"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cekProfil"
        app:drawableTint="@color/red" />

    <TextView
        android:id="@+id/tv_info_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/text_info_refresh"
        app:layout_constraintTop_toBottomOf="@id/tv_cekEmailVerified"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_sendLaporan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:clickable="false"
        app:cardBackgroundColor="@color/blue_primary_variant"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_cekEmailVerified">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_add_white"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/opensans_bold"
                android:gravity="center_horizontal"
                android:text="@string/buat_laporan"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>